src/scripts/css/main.css
body,
html,
#mainPage {
  height: 100%;
  width: 100%;
  display: block;
  background-color: #EBEBEB;
  overflow-x: hidden;
  overflow-y: hidden; }

#canvas {
  height: 100%; }

svg .nodes {
  stroke: white;
  stroke-width: 2px; }
svg .node-label {
  color: #ffffff;
  font-family: 'Raleway', sans-serif;
  font-size: 14px;
  font-weight: 700;
  text-transform: uppercase;
  stroke-width: 0px; }

.context-custom {
  font-size: 18px !important; }

.instruction-box {
  z-index: 1;
  text-align: center;
  position: absolute;
  top: 10%;
  left: 50%;
  transform: translate(-50%, 0%); }
  .instruction-box h4 {
    color: #333333;
    font-family: 'Bitter', sans-serif;
    font-size: 28px;
    font-weight: bold; }

.info-section {
  height: 100%;
  width: 33%;
  position: absolute;
  right: -33%;
  top: 0px;
  z-index: 1;
  background-color: #1b1a1c;
  overflow-y: auto;
  overflow-x: hidden;
  transition: 0.5s;
  box-shadow: 0px 0 5px 2px #888888; }
  .info-section .datastuff {
    padding-top: 40px;
    display: block; }
    .info-section .datastuff img {
      width: 40%;
      height: 40%;
      border-style: solid;
      border-width: 3px;
      border-color: #EBEBEB;
      background-color: white; }
    .info-section .datastuff h1 {
      color: #EBEBEB;
      font-family: "Verdana";
      font-size: 48px;
      font-size: 2.2vw;
      letter-spacing: -2px;
      font-weight: bold;
      margin-bottom: 5px;
      margin-top: 20px;
      text-align: center;
      text-shadow: 0 5px 5px black; }
    .info-section .datastuff .main-desc-body {
      color: #BFBFBF;
      display: block;
      margin: 0px 9% 0px 10%; }
      .info-section .datastuff .main-desc-body h3 {
        font-size: 18px;
        font-size: 1vw;
        font-family: 'Helvetica', sans-serif; }
      .info-section .datastuff .main-desc-body .info-tags {
        padding-top: 35px;
        text-align: center;
        padding-right: 5%;
        padding-bottom: 10px; }
        .info-section .datastuff .main-desc-body .info-tags .rib-group {
          padding-bottom: 25px; }
          .info-section .datastuff .main-desc-body .info-tags .rib-group .rib-wrap {
            display: inline-block;
            font-size: 12px;
            padding-right: 25px;
            padding-left: 25px;
            padding-bottom: 3px; }
      .info-section .datastuff .main-desc-body .ext-links {
        text-align: center;
        padding-right: 5%; }
        .info-section .datastuff .main-desc-body .ext-links a {
          display: inline-block;
          font-size: 25px; }
          .info-section .datastuff .main-desc-body .ext-links a .fa-github {
            color: #EBEBEB; }

/*# sourceMappingURL=main.css.map */

